Updated the way the blank detection percentage column is accessed and updated font sizes and box positions to prevent box overlap.

--- a/styles/decisionTree-styles.css
+++ b/styles/decisionTree-styles.css
@@ -95,7 +95,7 @@ text.logicTree {
   background-color: rgba(255, 255, 255, 1);
   text-align: center;
   padding: 3px 0px;
-  font-size: 1rem;
+  font-size: 0.95rem;
   border: 2px solid rgb(0, 0, 0);
   color: rgb(0, 0, 0);
 }
